More fixes
- Fix binding name lowercase mode (to support custom binding as DOM
attribute names)
- Fix next/complete shake on wizards
- Fix missing credentials in account details modal
- Fix overflowing text in node installation commands

--- a/frontend/src/app/components/modals/install-nodes-modal/install-nodes-modal.less
+++ b/frontend/src/app/components/modals/install-nodes-modal/install-nodes-modal.less
@@ -48,7 +48,7 @@
         word-break: break-all;
 
         .text-tech {
-            font-size: @font-size1;
+            font-size: 10px;
             overflow-y: hidden;
         }
     }
